Fixed the 'cancel' button color on the add idea page on mobile

--- a/idea/static/idea/css/idea_mobile.css
+++ b/idea/static/idea/css/idea_mobile.css
@@ -549,6 +549,9 @@ ul.section-nav li.active a {
     background: #05aaa6;
     color: #fff;
 }
+.project-add .secondary-action {
+    background: #555;
+}
 .idea-hero {
     margin: 0;
 }
